--- a/portfolio.html
+++ b/portfolio.html
@@ -7,33 +7,38 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>German Gamboa | Home</title>
   <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
+
   <link rel="icon" href="assets/images/coffeebean-16-195484.png">
 </head>
 
 <body>
+  <div class="content group">
   <header class="group">
-    <div class="wrapper group">
-      <div class="logo">
-        <p>German Gamboa</p>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">
+        <div class="logo">
+          <p>German Gamboa</p>
+        </div></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
+          <a class="nav-item nav-link" href="contact.html">Contact</a>
+        </div>
       </div>
-      <nav class="group">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-
-    </div>
-    <!--End of nav wrapper -->
+    </nav>
   </header>
   <section class="container group">
     <h1>Portfolio</h1>
     <hr>
 
     <div class="row">
-      <div class="card col-5">
+      <div class="card col-md-6 mx-auto">
         <img src="https://images.pexels.com/photos/607812/pexels-photo-607812.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
         <div class="overlay">
           <div class="text">
@@ -42,7 +47,7 @@
           </div>
         </div>
       </div>
-      <div class="card col-5">
+      <div class="card col-md-6 mx-auto">
         <img src="https://images.pexels.com/photos/89955/pexels-photo-89955.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
         <div class="overlay">
           <div class="text">
@@ -54,7 +59,7 @@
     </div>
 
     <div class="row">
-      <div class="card col-5">
+      <div class="card col-md-6 mx-auto">
         <img src="https://images.pexels.com/photos/38271/ipad-map-tablet-internet-38271.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" alt="">
         <div class="overlay">
           <div class="text">
@@ -63,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div class="card col-5">
+      <div class="card col-md-6 mx-auto">
         <img src="https://images.pexels.com/photos/242492/pexels-photo-242492.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" alt="">
         <div class="overlay">
           <div class="text">
@@ -81,6 +86,9 @@
   <footer>
     <p>German Gamboa &copy; 2018</p>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script type="text/javascript">
     window.onload = () => {
       let x = document.querySelectorAll('.container');
